find_package(GoogleTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/tests)
add_definitions("-DDATADIR=\"${LIBKML_DATA_DIR}\"")
message(STATUS "GTEST_LIBRARY: ${GTEST_LIBRARY}")
message(STATUS "GTEST_INCLUDE_DIR: ${GTEST_INCLUDE_DIR}")

add_subdirectory(kml/base)
add_subdirectory(kml/convenience)
add_subdirectory(kml/dom)
add_subdirectory(kml/engine)
add_subdirectory(kml/regionator)
add_subdirectory(kml/xsd)
if(WITH_SWIG)
  add_subdirectory(swig)
endif()
